[gd_scene load_steps=4 format=3 uid="uid://d1ubnvlhyen4y"]

[ext_resource type="Script" uid="uid://tiaboo4lanke" path="res://components/level_item.gd" id="1_atdoe"]
[ext_resource type="Texture2D" uid="uid://qranu7is4cgp" path="res://assets/images/_debug/level_item_Frame.png" id="2_atdoe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qha0s"]
bg_color = Color(0, 0.501961, 1, 0.113725)

[node name="Level_Item" type="MarginContainer"]
offset_right = 252.0
offset_bottom = 249.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_atdoe")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qha0s")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Content_Margin" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Setting_Margin" type="MarginContainer" parent="PanelContainer/VBoxContainer/Content_Margin"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer"]
layout_mode = 2

[node name="level_Label" type="Label" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.784314, 1, 1, 1)
text = "Level 01 - Dusty Springs"

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer/PanelContainer4"]
layout_mode = 2
texture = ExtResource("2_atdoe")

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Content_Margin/Setting_Margin/VBoxContainer/PanelContainer3"]
layout_mode = 2
text = "Start"
